--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pindwin",
   "version": "1.0.0",
-  "description": "A program to pin many windows",
+  "description": "Pin windows",
   "main": "index.js",
   "scripts": {
     "electron": "electron ."
@@ -10,11 +10,6 @@
     "type": "git",
     "url": "git+https://github.com/Luanpablo100/pindwin.git"
   },
-  "keywords": [
-    "Pin",
-    "Window",
-    "Fix"
-  ],
   "author": "Luan Oliveira",
   "license": "MIT",
   "bugs": {
@@ -22,6 +17,6 @@
   },
   "homepage": "https://github.com/Luanpablo100/pindwin#readme",
   "dependencies": {
-    "electron": "^10.1.5"
+    "electron": "^10.1.3"
   }
 }
