--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Pin windows",
   "main": "index.js",
   "scripts": {
-    "electron": "electron ."
+    "electron": "electron .",
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/img/pindwin.icns --prune=true --out=release-builds",
+    "package-win": "electron-packager . pindwin --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/img/pindwin.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Pindwin\"",    
+    "package-linux": "electron-packager . pindwin --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/img/pindwin.ico --prune=true --out=release-builds"
   },
   "repository": {
     "type": "git",
