--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "electron": "electron .",
     "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/img/pindwin.icns --prune=true --out=release-builds",
-    "package-win": "electron-packager . pindwin --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/img/pindwin.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Pindwin\"",    
+    "package-win": "electron-packager . pindwin --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/img/pindwin.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Pindwin\"",
     "package-linux": "electron-packager . pindwin --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/img/pindwin.ico --prune=true --out=release-builds"
   },
   "repository": {
@@ -20,7 +20,8 @@
   },
   "homepage": "https://github.com/Luanpablo100/pindwin#readme",
   "dependencies": {
-    "electron": "^10.1.3"
+    "electron": "11.0.0",
+    "lowdb": "^1.0.0"
   },
   "devDependencies": {
     "electron-packager": "^15.1.0"
