--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "pindwin-ts",
+  "name": "electron-quick-start-typescript",
   "version": "1.0.0",
-  "description": "Create and pin windows",
-  "main": "build/index.js",
+  "description": "A minimal Electron application written with Typescript",
   "scripts": {
-    "compile": "tsc && mv index.js build/",
-    "start": "npm run compile && electron build/.",
-    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=assets/img/pindwin.icns --prune=true --out=release-builds",
-    "package-win": "electron-packager . pindwin --overwrite --asar=true --platform=win32 --arch=ia32 --icon=assets/img/pindwin.ico --prune=true --out=release-builds --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"Pindwin\"",
-    "package-linux": "electron-packager . pindwin --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/img/pindwin.ico --prune=true --out=release-builds"
+    "build": "tsc",
+    "watch": "tsc -w",
+    "lint": "eslint -c .eslintrc --ext .ts ./src",
+    "start": "npm run build && electron ./dist/main.js"
   },
-  "author": "Luan Oliveira",
-  "license": "MIT",
-  "dependencies": {
-    "@types/lowdb": "^1.0.9",
-    "electron": "^11.0.3",
-    "lowdb": "^1.0.0",
+  "repository": "https://github.com/electron/electron-quick-start-typescript",
+  "keywords": [
+    "Electron",
+    "quick",
+    "start",
+    "tutorial",
+    "demo",
+    "typescript"
+  ],
+  "author": "GitHub",
+  "license": "CC0-1.0",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "electron": "^11.0.1",
+    "eslint": "^7.15.0",
     "typescript": "^4.1.2"
   },
-  "devDependencies": {
-    "electron-packager": "^15.1.0"
+  "dependencies": {
+    "@types/lowdb": "^1.0.9",
+    "lowdb": "^1.0.0"
   }
 }
