--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "electron-quick-start-typescript",
-  "version": "1.0.0",
-  "description": "A minimal Electron application written with Typescript",
+  "name": "pindwin",
+  "version": "1.5.0",
+  "description": "create and pin web pages",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "lint": "eslint -c .eslintrc --ext .ts ./src",
     "start": "npm run build && electron ./dist/main.js"
   },
-  "repository": "https://github.com/electron/electron-quick-start-typescript",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Luanpablo100/pindwin.git"
+  },
+  "homepage": "https://github.com/Luanpablo100/pindwin#readme",
   "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo",
-    "typescript"
+
   ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "author": "https://github.com/Luanpablo100",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Luanpablo100/pindwin/issues"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
-    "electron": "^11.0.1",
     "eslint": "^7.15.0",
     "typescript": "^4.1.2"
   },
   "dependencies": {
+    "electron": "11.0.1",
     "@types/lowdb": "^1.0.9",
     "lowdb": "^1.0.0"
   }
